# ligate-research

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md
.github/workflows/: citations.yml  cla.yml
papers/: CONSISTENCY_REVIEW.md  README.md
papers/_template/: paper-template.md
papers/c2pa-composition/: README.md  c2pa-composition.md
papers/cross-chain-portability/: README.md  cross-chain-portability.md
papers/cross-schema-composition/: READING_GUIDE.md  README.md  cross-schema-composition.md
papers/eas-comparison/: README.md  eas-comparison.md
papers/native-da/: READING_GUIDE.md  README.md  native-da.md
papers/native-delegation/: READING_GUIDE.md  README.md  native-delegation.md
papers/per-schema-fees/: READING_GUIDE.md  README.md  per-schema-fees.md
papers/poua/: CHANGELOG.md  CONVENTIONS.md  READING_GUIDE.md  README.md  header-includes.tex  poua.md  poua.tex
papers/poua/specs/: a3-slash-and-layer-2-paper-integration.md  arxiv-v0.8-submission.md  eta-lambda-rebase.md  m7-network-conditions-paper-integration.md
papers/pq-migration/: README.md  pq-migration.md
papers/schema-bound-tokens/: README.md  schema-bound-tokens.md
papers/tee-composition/: README.md  tee-composition.md
papers/themisra-licensing-schemas/: README.md  themisra-licensing-schemas.md
papers/time-locked-attestations/: READING_GUIDE.md  README.md  time-locked-attestations.md
papers/tokenomics/: README.md  tokenomics.md
papers/verifiable-content-provenance/: README.md  verifiable-content-provenance.md
prototypes/native-delegation-sim/: README.md  pyproject.toml
prototypes/native-delegation-sim/scripts/: regenerate_test_vectors.py  run_strategic_adversary.py  run_theorem_1_validation.py
prototypes/native-delegation-sim/src/native_delegation_sim/: __init__.py  encoding.py  grant.py  lifecycle.py  slashing.py  strategic_adversary.py  strategy_search.py  validator.py
prototypes/native-delegation-sim/test_vectors/: README.md  grant_encoding.json
prototypes/native-delegation-sim/tests/: test_encoding.py  test_lifecycle.py  test_scaffold.py  test_slashing_inheritance.py  test_strategic_adversary.py  test_strategy_search.py
prototypes/per-schema-fees-sim/: .gitignore  README.md  pyproject.toml
prototypes/per-schema-fees-sim/scripts/: regenerate_test_vectors.py  run_attack_pattern_b.py  run_fee_market_convergence.py  run_kl_detector.py
prototypes/per-schema-fees-sim/src/per_schema_fees_sim/: __init__.py  adversary.py  cross_schema.py  fee_market.py  kl_detector.py  security.py
prototypes/per-schema-fees-sim/test_vectors/: README.md  burn_split.json  cost_to_grind.json  fee_adjustment.json  trajectory.json
prototypes/per-schema-fees-sim/tests/: test_adversary.py  test_cross_schema.py  test_fee_market.py  test_kl_detector.py  test_scaffold.py  test_security.py
prototypes/poua-sim/: .gitignore  README.md  pyproject.toml
prototypes/poua-sim/data/: empirical_powerlaw_fit.json  ethereum_bipartite_25194472_25194521.json
prototypes/poua-sim/docs/: a3-slash-integration.md  m6-design.md  m7-design.md
prototypes/poua-sim/scripts/: fetch_ethereum_bipartite.py  fit_powerlaw_and_calibrate.py  generate_test_vectors.py  run_a3_fpr_comparison.py  run_a3_fpr_realchain.py  run_a3_tpr_scan.py  run_adversarial_latency.py  run_capital_scan.py  run_eclipse_recovery.py  run_kappa_trajectory.py  run_lemma1_scan.py  run_rebase_interaction.py  run_scale_benchmark.py  run_strategy_search.py  run_volume_deterrent.py
prototypes/poua-sim/src/poua_sim/: __init__.py  a3_slash.py  agent.py  attestation.py  chain.py  detectors.py  layers.py  metrics.py  network.py  proposer.py  rebase.py  reputation.py  validator.py
prototypes/poua-sim/src/poua_sim/adversary/: __init__.py  capital.py  compound.py
prototypes/poua-sim/test_vectors/: README.md  alpha_eff.json  cost_to_attack.json  lemma1_cost_to_grind.json  reputation_update.json
prototypes/poua-sim/tests/: test_a3_slash.py  test_agent.py  test_capital_adversary.py  test_chain.py  test_chain_epochs.py  test_compound_adversary.py  test_detectors.py  test_layer_2.py  test_layers.py  test_metrics.py  test_network.py  test_proposer.py  test_rebase.py  test_reputation.py  test_scale.py  test_test_vectors.py  test_validator.py
prototypes/time-locked-attestations-sim/: README.md  pyproject.toml
prototypes/time-locked-attestations-sim/scripts/: run_failure_mode_panel.py
prototypes/time-locked-attestations-sim/src/time_locked_attestations_sim/: __init__.py  commitment.py  failure_modes.py  lifecycle.py  transactions.py
prototypes/time-locked-attestations-sim/test_vectors/: commitment_canonical_encoding.json
prototypes/time-locked-attestations-sim/tests/: test_commitment.py  test_failure_modes.py  test_lifecycle.py  test_transactions.py
scripts/: build_portfolio_overview.py  check_citations.py
