[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "per-schema-fees-sim"
version = "0.3.0"
description = "Reference simulator for Per-Schema Fee Markets on Ligate Chain (companion to papers/per-schema-fees/)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0 OR MIT" }
authors = [
    { name = "Ligate Labs", email = "hello@ligate.io" },
]
keywords = ["fee-market", "eip-1559", "blockchain", "simulation", "ligate-chain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
